@startuml Real_Estate_Class_Diagram

!theme plain
skinparam linetype ortho

title Real Estate Application - Class Diagram

class User {
    id = 1
    username = "john_agent"
    email = "john@realestate.com"
    first_name = "John"
    last_name = "Doe"
    user_type = "agent"
    profile_image = "/media/profiles/john.jpg"
    unique_key = "ABC123XYZ"
    phone_number = "+1234567890"
    bio = "Experienced real estate agent"
    --
    +is_agent(): boolean
    +is_customer(): boolean
    +is_admin_user(): boolean
}

class Property {
    id = 1
    title = "Modern Downtown Apartment"
    address = "123 Main St, Downtown"
    price = 450000.00
    bedrooms = 2
    bathrooms = 2.0
    square_footage = 1200
    description = "Beautiful apartment..."
    status = "available"
    agent_id = 1
    created_at = "2025-01-15 10:30:00"
    updated_at = "2025-01-20 14:15:00"
}

class PropertyImage {
    id = 1
    property_id = 1
    image = "/media/properties/apt1_main.jpg"
    order = 0
}

class Favorite {
    id = 1
    user_id = 2
    property_id = 1
    added_at = "2025-01-18 09:15:00"
}

class SearchHistory {
    id = 1
    user_id = 2
    query = "downtown apartment 2 bedroom"
    property_id = 1
    timestamp = "2025-01-18 14:30:00"
}

class Recommendation {
    id = 1
    user_id = 2
    property_id = 1
    score = 0.85
    created_at = "2025-01-18 15:00:00"
}

class PropertyMessage {
    id = 1
    property_id = 1
    sender_id = 2
    content = "Is this property still available?"
    timestamp = "2025-01-20 16:45:00"
    read = false
}

' Object relationships with labels
User ||--o{ Property : "agent"
Property ||--o{ PropertyImage : "images"
User ||--o{ Favorite : "user"
Property ||--o{ Favorite : "property"
User ||--o{ SearchHistory : "user"
Property ||--o{ SearchHistory : "property"
User ||--o{ Recommendation : "user"
Property ||--o{ Recommendation : "property"
User ||--o{ PropertyMessage : "sender"
Property ||--o{ PropertyMessage : "property"

' Add sample instances
object user1 : User
user1 : id = 1
user1 : username = "john_agent"
user1 : user_type = "agent"

object user2 : User
user2 : id = 2
user2 : username = "jane_customer"
user2 : user_type = "customer"

object property1 : Property
property1 : id = 1
property1 : title = "Downtown Apartment"
property1 : price = 450000.00
property1 : agent = user1

object image1 : PropertyImage
image1 : id = 1
image1 : property = property1
image1 : order = 0

object favorite1 : Favorite
favorite1 : user = user2
favorite1 : property = property1

' Connect instances
user1 ||--o{ property1
property1 ||--o{ image1
user2 ||--o{ favorite1
property1 ||--o{ favorite1

@enduml
